Add bug 11 (Required)
