# src/main/java/ch/swaechter/bug11/BackupFrequencyExDto.java
@@ -1,0 +1,17 @@
+package ch.swaechter.bug11;
+
+import io.micronaut.core.annotation.Introspected;
+import io.swagger.v3.oas.annotations.media.Schema;
+
+@Introspected
+@Schema(description = "Schema that represents the frequency of the backup")
+public enum BackupFrequencyExDto {
+    DAILY,
+    MONDAY,
+    TUESDAY,
+    WEDNESDAY,
+    THURSDAY,
+    FRIDAY,
+    SATURDAY,
+    SUNDAY
+}
